// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarIcon renders properly with variant selected 1`] = `
<div>
  <div
    class="sc-bdvvtL imDser"
  >
    <mocked-star-selected-svg
      height="16"
      width="16"
    />
  </div>
</div>
`;

exports[`StarIcon renders properly with variant unselected 1`] = `
<div>
  <div
    class="sc-bdvvtL imDser"
  >
    <mocked-star-unselected-svg
      height="16"
      width="16"
    />
  </div>
</div>
`;

exports[`StarIcon renders properly with variant void 1`] = `
<div>
  <div
    class="sc-bdvvtL imDser"
  >
    <mocked-star-void-svg
      height="16"
      width="16"
    />
  </div>
</div>
`;
